<resources>
    <string name="app_name">Budget Planner</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_homepage">homepage</string>
    <string name="bar_graph_top">Bar Graph</string>
    <string name="pie_chart_2top">Pie chart</string>
    <string name="Budget_label">Budget</string>
    <string name="prediction">Predicted Expenses</string>
    <string name="homepage_button">Homepage</string>
    <string name="spend_Label">Spend</string>
    <string name="top_spend_label">Top Spend</string>
    <string name="Budgetamt">5500 Rs.</string>
    <string name="_5500_rs">5500 Rs.</string>
    <string name="edit_label">Edit</string>
    <string name="bill_title">Bills Data</string>
    <string name="cash_title">Cash Data</string>
    <string name="manifest_spendlabel">Spend Summary</string>
    <string name="manifest_billslabel">Bills</string>
    <string name="manifest_cashlabel">Cash</string>
    <string name="customrow_text">Cash</string>
    <string name="spend_summary">Spend Summary</string>
    <string name="my_budget">Monthly Budget</string>
    <string name="rs">Rs.</string>
    <string name="set_now">Set Now</string>
    <string name="transactions">Transactions</string>
    <string name="happy">happy</string>
    <string name="worry">worry</string>
    <string name="sad">sad</string>
    <string name="top_spend_areas">Top Spend Areas</string>
    <string name="addExpense_title">Add Expense</string>
    <string name="addIncome_title">Add Income</string>
    <string name="expense_hintamt">Enter Amount</string>
    <string name="expense_hintspend">Description</string>
    <string name="calendar_btntext">Select a Date</string>
    <string name="expense_textview">Select a category</string>
    <string name="available_balance">Available Balance</string>
    <string name="predicted_expense">Predicted Expense</string>
    <string name="Predicted_expense">0.0 Rs</string>
</resources>
