<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context="planner.budget.budgetplanner.EditIncome">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <EditText
        android:id="@+id/edit_income_amttextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="90dp"
        android:hint="@string/expense_hintamt"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="number"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/edit_income_desctextview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="155dp"
        android:hint="@string/expense_hintspend"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLength="50"/>

    <TextView
        android:id="@+id/edit_income_spinnertitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="220dp"
        android:text="@string/expense_textview"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/edit_income_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="191dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="245dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_income_calendar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="300dp"
        android:text="@string/calendar_btntext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/edit_income_deletebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginStart="290dp"
        android:layout_marginTop="480dp"
        android:src="@drawable/vc_edit_expense_deletebtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        fab:fab_colorNormal="#FF1000"
        fab:fab_colorPressed="#FF2719"
        fab:fab_colorRipple="#DCEDC8" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/edit_income_editbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginStart="290dp"
        android:layout_marginTop="400dp"
        android:src="@drawable/vc_edit_expense_editbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        fab:fab_colorNormal="#2196F3"
        fab:fab_colorPressed="#90CAF9"
        fab:fab_colorRipple="#DCEDC8" />

</android.support.constraint.ConstraintLayout>
